--- a/css/main.css
+++ b/css/main.css
@@ -622,7 +622,7 @@ nav #icon {
 }
 
 .products-preview .preview .price {
-  padding: 1.5rem ;
+  padding: 0.1rem 3rem;
   font-size: 1.5rem;
   color: #27ae60;
 }
